--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -9,6 +9,7 @@
 @use '../component/UI/PosterView/PosterView';
 @use '../component/UI/CastInfo/CastInfo';
 @use '../component/UI/Account/Account';
+@use '../component/UI/SearchModal/SearchModal';
 
 h1 {
     font-size: 3rem;
