--- a/component/UI/Header/_header.scss
+++ b/component/UI/Header/_header.scss
@@ -1,5 +1,5 @@
-.top-header{
-    background: rgba(0,0,0,0);
+.top-header {
+    background: rgba(0, 0, 0, 0);
     color: white;
     display: flex;
     justify-content: space-between;
@@ -11,35 +11,44 @@
     width: 100%;
     z-index: 10;
     transition: background .3s ease-in-out;
-    &:hover{
-        background: rgba(0,0,0,1);
+
+    &:hover {
+        background: rgba(0, 0, 0, 1);
     }
-    &__logo{
+
+    &__logo {
         background-size: 100% 100%;
         height: 22px;
         width: 129px;
         background-image: url(/img/logo.svg);
         transform: scale(.9);
     }
-    &__left-side{
+
+    &__left-side {
         display: flex;
-        div:nth-child(1){
+
+        div:nth-child(1) {
             margin-right: 40px;
         }
     }
-    &__account{
+
+    &__account {
         display: flex;
         justify-content: center;
         align-items: center;
     }
-    &__user-img{
+
+    &__user-img {
         width: 30px;
         height: 30px;
         border-radius: 50%;
-        border: 3px solid rgb(132,0,255);
+        border: 3px solid rgb(132, 0, 255);
         object-fit: cover;
         object-position: center;
         margin-right: 1rem;
     }
-}
 
+    &__menu-btn {
+        cursor: pointer;
+    }
+}
