--- a/component/UI/Header/_header.scss
+++ b/component/UI/Header/_header.scss
@@ -12,6 +12,10 @@
     z-index: 10;
     transition: background .3s ease-in-out;
 
+    &__menu-open {
+        background: black;
+    }
+
     &:hover {
         background: rgba(0, 0, 0, 1);
     }
@@ -36,6 +40,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        cursor: pointer;
     }
 
     &__user-img {
@@ -46,6 +51,14 @@
         object-fit: cover;
         object-position: center;
         margin-right: 1rem;
+    }
+
+    &__menu-btn {
+        cursor: pointer;
+    }
+
+    &__search-btn {
+        cursor: pointer;
     }
 
     &__menu-btn {
