--- a/component/UI/MediaRow/_MediaRow.scss
+++ b/component/UI/MediaRow/_MediaRow.scss
@@ -1,4 +1,4 @@
-.foryou-list {
+.media-row {
     padding: 20px 0 20px 50px;
 
     &__title {
@@ -21,14 +21,10 @@
     }
 
     &__thumbnail {
-        width: 450px;
-        height: 253px;
         position: relative;
         margin-right: 10px;
 
         img {
-            width: 450px;
-            height: 253px;
             object-fit: cover;
             object-position: center;
         }
@@ -66,6 +62,58 @@
             transform: translate3d(0, 100px, 0);
             opacity: 0;
             transition: all .3s ease-in-out .2s;
+        }
+    }
+
+    &.large-v {
+        .media-row__thumbnail {
+            width: 400px;
+            height: 600px;
+
+            img {
+                width: 400px;
+                height: 600px;
+
+            }
+        }
+    }
+
+    &.small-v {
+        .media-row__thumbnail {
+            width: 240px;
+            height: 360px;
+
+            img {
+                width: 240px;
+                height: 360px;
+
+            }
+        }
+    }
+
+    &.large-h {
+        .media-row__thumbnail {
+            width: 700px;
+            height: 394px;
+
+            img {
+                width: 700px;
+                height: 394px;
+
+            }
+        }
+    }
+
+    &.small-h {
+        .media-row__thumbnail {
+            width: 450px;
+            height: 253px;
+
+            img {
+                width: 450px;
+                height: 253px;
+
+            }
         }
     }
 }
