--- a/component/UI/MediaRow/_MediaRow.scss
+++ b/component/UI/MediaRow/_MediaRow.scss
@@ -65,6 +65,36 @@
         }
     }
 
+    &__thumbnail-skeleton-img {
+        background: rgb(19, 19, 19);
+        margin: 10px 0px;
+        position: relative;
+        overflow: hidden;
+    }
+
+    &__thumbnail-skeleton-img::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        background: rgba(255, 255, 255, 0.082);
+        height: 100%;
+        transform: skew(5deg);
+        animation: shine infinite 1.5s ease-in-out;
+        filter: blur(100px);
+    }
+
+    @keyframes shine {
+        from {
+            transform: skew(45deg) translateX(-200%);
+        }
+
+        to {
+            transform: skew(45deg) translateX(300%);
+        }
+    }
+
     &.large-v {
         .media-row__thumbnail {
             width: 400px;
@@ -75,6 +105,17 @@
                 height: 600px;
 
             }
+        }
+
+        .media-row__thumbnail-skeleton {
+            width: 400px;
+            height: 600px;
+            margin-right: 10px;
+        }
+
+        .media-row__thumbnail-skeleton-img {
+            width: 400px;
+            height: 600px;
         }
     }
 
@@ -89,6 +130,17 @@
 
             }
         }
+
+        .media-row__thumbnail-skeleton {
+            width: 240px;
+            height: 360px;
+            margin-right: 10px;
+        }
+
+        .media-row__thumbnail-skeleton-img {
+            width: 240px;
+            height: 360px;
+        }
     }
 
     &.large-h {
@@ -102,6 +154,17 @@
 
             }
         }
+
+        .media-row__thumbnail-skeleton {
+            width: 700px;
+            height: 394px;
+            margin-right: 10px;
+        }
+
+        .media-row__thumbnail-skeleton-img {
+            width: 700px;
+            height: 394px;
+        }
     }
 
     &.small-h {
@@ -114,6 +177,17 @@
                 height: 253px;
 
             }
+        }
+
+        .media-row__thumbnail-skeleton {
+            width: 450px;
+            height: 253px;
+            margin-right: 10px;
+        }
+
+        .media-row__thumbnail-skeleton-img {
+            width: 450px;
+            height: 253px;
         }
     }
 }
