--- a/component/UI/FeaturedMedia/_FeaturedMedia.scss
+++ b/component/UI/FeaturedMedia/_FeaturedMedia.scss
@@ -12,6 +12,16 @@
         transform: scale(1.5)
     }
 
+    &__img {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        transform: scale(1.5);
+        object-fit: cover;
+        object-position: center;
+    }
+
     &__bg {
         background: linear-gradient(180deg, rgba(94, 158, 255, 0) 60%, rgba(68, 61, 156, .8) 100%);
         position: absolute;
