--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -9,6 +9,7 @@
 @use '../component/UI/Account/Account';
 @use '../component/UI/SearchModal/SearchModal';
 @use '../component/UI/MediaRow/MediaRow';
+@use '../component/UI/GenreNav/GenreNav';
 
 
 h1 {
