--- a/component/UI/SearchModal/_SearchModal.scss
+++ b/component/UI/SearchModal/_SearchModal.scss
@@ -9,6 +9,7 @@
     opacity: 0;
     z-index: 13;
     visibility: hidden;
+    overflow: auto;
 
     &--active {
         opacity: 1;
@@ -28,6 +29,7 @@
         border: none;
         border-bottom: 2px solid rgb(132, 0, 255);
         outline: none;
+        color: white;
     }
 
     &__close-btn {
