--- a/styles/_create-user.scss
+++ b/styles/_create-user.scss
@@ -1,18 +1,20 @@
-.create-user{
-    background: linear-gradient(312deg, rgba(26,39,103,1) 0%, rgba(48,20,94,1) 45%, rgba(0,0,0,1) 100%); 
+.create-user {
+    background: linear-gradient(312deg, rgba(26, 39, 103, 1) 0%, rgba(48, 20, 94, 1) 45%, rgba(0, 0, 0, 1) 100%);
     height: 100vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    &__top{
+
+    &__top {
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: column;
         margin-top: 2rem;
     }
-    &__logo{
+
+    &__logo {
         background-size: 100% 100%;
         height: 22px;
         width: 129px;
@@ -20,29 +22,34 @@
         transform: scale(.9);
         margin-bottom: 1rem;
     }
-    &__title{
+
+    &__title {
         color: white;
         font-size: 2rem;
         font-weight: 300;
     }
-    &__form{
+
+    &__form {
         display: flex;
         justify-content: center;
         align-items: center;
     }
-    &__input-group{
+
+    &__input-group {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        label{
+
+        label {
             font-size: .8rem;
             color: white;
             margin-bottom: 1rem;
         }
     }
-    &__input-text{
+
+    &__input-text {
         border: none;
-        border-bottom: 1px solid rgb(132,0,255);
+        border-bottom: 1px solid rgb(132, 0, 255);
         background: transparent;
         width: 300px;
         padding: 10px 0;
@@ -51,38 +58,46 @@
         color: white;
         font-size: 1.5rem;
     }
-    &__colors{
+
+    &__colors {
         display: flex;
         justify-content: space-between;
     }
-    &__color{
+
+    &__color {
         border-radius: 50%;
         height: 30px;
         width: 30px;
         cursor: pointer;
         transition: transform .4s ease-in-out;
-        &--active{
+
+        &--active {
             border: 3px solid white;
         }
-        &:hover{
+
+        &:hover {
             transform: scale(1.5);
         }
     }
-    &__user-img{
+
+    &__user-img {
         width: 125px;
         height: 125px;
         border-radius: 50%;
         margin-bottom: 1rem;
-        border: 3px solid rgb(132,0,255);
+        border: 3px solid rgb(132, 0, 255);
         object-fit: cover;
         object-position: center;
         margin-right: 3rem;
     }
-    &__buttons{
+
+    &__buttons {
         margin-bottom: 2rem;
     }
-    &__cancel, &__save{
-        background: rgba(255,255,255, .2);
+
+    &__cancel,
+    &__save {
+        background: rgba(255, 255, 255, .2);
         border: none;
         border-radius: 20px;
         height: 35px;
@@ -94,14 +109,29 @@
         cursor: pointer;
         transition: opacity .3 ease-in-out;
     }
-    &__cancel{
+
+    &__cancel {
         opacity: .4;
         margin-right: 1rem;
-        &:hover{
+
+        &:hover {
             opacity: 1;
         }
     }
-    &__save{
+
+    &__save {
         opacity: 1;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .create-user {
+        &__form {
+            flex-direction: column;
+        }
+
+        &__user-img {
+            margin-right: 0;
+        }
     }
 }
