--- a/component/UI/Header/_header.scss
+++ b/component/UI/Header/_header.scss
@@ -22,9 +22,9 @@
 
     &__logo {
         background-size: 100% 100%;
-        height: 22px;
-        width: 129px;
-        background-image: url(/img/logo.svg);
+        height: 50px;
+        width: 170px;
+        background-image: url(../../../public/img/logo.png);
         transform: scale(.9);
     }
 
